<resources>
    <string name="app_name" translatable="false">Balla Balla</string>
    <string name="button_ok">OK</string>
    <string name="toast_new_game">new game</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_defaults">Defaults</string>
    <string name="label_number_of_colors">Number of Colors: %1$d</string>
    <string name="label_additional_tubes">Additional Tubes: %1$d</string>
    <string name="label_height">Height: %1$d</string>
    <string name="alert_title_puzzle_solved">Awesome!</string>
    <string name="alert_text_puzzle_solved">You solved the puzzle.</string>
    <string name="desc_burger_menu">burger menu</string>
    <string name="desc_star">star</string>
    <string name="desc_rewind">rewind</string>
    <string name="desc_arrow_left">arrow left</string>
    <string name="desc_plus_one">plus one</string>
    <string name="desc_lightbulb">light bulb</string>
    <string name="menu_new_game">New Game</string>
    <string name="menu_dimensions">Dimensions</string>
    <string name="menu_cheat">Cheat</string>
    <string name="menu_sound_and_animations">Sound &amp; Animations</string>
    <string name="menu_close">Save &amp; Quit</string>
    <string name="toggles_label_computer_support">Computer support:</string>
    <string name="toggles_label_animations">Play animations:</string>
    <string name="toggles_label_sound">Play sound:</string>
    <string name="desc_speaker">speaker</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>