<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/labelNumberOfColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_number_of_colors"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/numberOfColors" />

    <SeekBar
        android:id="@+id/numberOfColors"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:max="13"
        app:layout_constraintTop_toBottomOf="@id/labelNumberOfColors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/labelAdditionalTubes" />

    <TextView
        android:id="@+id/labelAdditionalTubes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_additional_tubes"
        app:layout_constraintTop_toBottomOf="@id/numberOfColors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/additionalTubes" />

    <SeekBar
        android:id="@+id/additionalTubes"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:max="2"
        app:layout_constraintTop_toBottomOf="@id/labelAdditionalTubes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/labelHeight" />

    <TextView
        android:id="@+id/labelHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_height"
        app:layout_constraintTop_toBottomOf="@id/additionalTubes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/height" />

    <SeekBar
        android:id="@+id/height"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:max="5"
        app:layout_constraintTop_toBottomOf="@id/labelHeight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/okButton" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/button_ok"
        android:onClick="onOkKlicked"
        app:layout_constraintTop_toBottomOf="@id/height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancelButton"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/button_cancel"
        android:onClick="onCancelKlicked"
        app:layout_constraintTop_toBottomOf="@id/height"
        app:layout_constraintLeft_toRightOf="@id/okButton"
        app:layout_constraintRight_toLeftOf="@id/defaultsButton"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/defaultsButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/button_defaults"
        android:onClick="onDefaultsKlicked"
        app:layout_constraintTop_toBottomOf="@id/height"
        app:layout_constraintLeft_toRightOf="@id/cancelButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>